fix: Removed deprecated field in JsonEvent
